--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -8,3 +8,4 @@ jobs:
       - uses: creyD/prettier_action@v4.3
         with:
           dry: True
+          prettier_options: --check **/*.{js,ts,jsx,tsx,vue,astro,json,html,cjs,mjs,css}
