--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
     "@mui/material-nextjs": "^5.15.9",
+    "chess.js": "^0.13.4",
     "next": "14.1.0",
     "react": "^18",
     "react-chessboard": "^4.4.0",
