--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "aau-p2-software",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -25,8 +26,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
@@ -34,6 +33,7 @@
     "postcss": "^8",
     "prettier": "3.2.5",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^7.0.1"
   }
 }
