--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -11,6 +11,6 @@ jobs:
       - run: npm ci
       - uses: sibiraj-s/action-eslint@v3
         with:
-          eslint-args: '--ignore-path=.gitignore --quiet'
-          extensions: 'js,jsx,ts,tsx'
+          eslint-args: '--ignore-pattern=.gitignore'
+          extensions: 'js,ts,jsx,tsx,html,vue'
           annotations: true
