Fix #20. Update Stockfish image

--- a/stockfish/Dockerfile
+++ b/stockfish/Dockerfile
@@ -9,7 +9,19 @@ RUN make -j build
 
 FROM alpine:latest
 
-RUN apk add -U --no-cache libstdc++
 
-COPY --from=builder /Stockfish/src/stockfish /usr/local/bin/
-COPY --from=builder /Stockfish/src/*.nnue /usr/local/bin/
+RUN apk add -U --no-cache libstdc++ ucspi-tcp6 openssh-server && \
+    addgroup -g 1000 stockfish && \
+    adduser -u 1000 -G stockfish -D stockfish
+RUN echo "stockfish:test123" | chpasswd
+
+COPY --chmod=744 ./entrypoint.sh /entrypoint.sh
+COPY ./sshd_config.conf /etc/ssh/sshd_config.d/sshd_config.conf
+COPY ./motd /etc/motd
+
+COPY --from=builder --chown=stockfish:stockfish /Stockfish/src/stockfish /usr/local/bin/
+COPY --from=builder --chown=stockfish:stockfish /Stockfish/src/*.nnue /usr/local/bin/
+
+EXPOSE 23249 22
+
+ENTRYPOINT ["/entrypoint.sh"]
