--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,12 +9,14 @@
         "editor.formatOnSave": true,
         "files.autoSave": "afterDelay",
         "editor.defaultFormatter": "esbenp.prettier-vscode",
-        "eslint.experimental.useFlatConfig": true
+        "eslint.experimental.useFlatConfig": true,
+        "typescript.tsdk": "node_modules/typescript/lib"
       },
       "extensions": [
         "esbenp.prettier-vscode",
         "dbaeumer.vscode-eslint",
-        "EditorConfig.EditorConfig"
+        "EditorConfig.EditorConfig",
+        "ms-vsliveshare.vsliveshare"
       ]
     }
   }
