--- a/package.json
+++ b/package.json
@@ -7,33 +7,34 @@
     "dev": "node_modules/.bin/next dev",
     "build": "node_modules/.bin/next build",
     "start": "node_modules/.bin/next start",
-    "lint": "node_modules/.bin/next lint"
+    "lint": "node_modules/.bin/next lint",
+    "prettier": "prettier -c **/*.{js,cjs,mjs,jsx,ts,tsx,json,html,css,md,yaml}"
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.9",
-    "@mui/material": "^5.15.9",
-    "@mui/material-nextjs": "^5.15.9",
+    "@mui/icons-material": "^5.15.13",
+    "@mui/material": "^5.15.13",
+    "@mui/material-nextjs": "^5.15.11",
     "chess.js": "^0.13.4",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-chessboard": "^4.4.0",
-    "react-dom": "^18"
+    "next": "^14.1.3",
+    "react": "^18.2.0",
+    "react-chessboard": "^4.5.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
+    "@types/node": "^20.11.28",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.3",
     "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8",
+    "postcss": "^8.4.35",
     "prettier": "3.2.5",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.3.3",
-    "typescript-eslint": "^7.0.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.2",
+    "typescript-eslint": "^7.2.0"
   }
 }
