--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -8,4 +8,4 @@ jobs:
       - uses: creyD/prettier_action@v4.3
         with:
           dry: True
-          prettier_options: --check **/*.{js,ts,jsx,tsx,vue,astro,json,html,cjs,mjs,css}
+          prettier_options: "-c **/*.{js,cjs,mjs,jsx,ts,tsx,json,html,css,md,yaml}"
