--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node_modules/.bin/next dev",
+    "dev": "NODE_OPTIONS='--inspect' node_modules/.bin/next dev",
     "build": "node_modules/.bin/next build",
     "start": "node_modules/.bin/next start",
     "lint": "node_modules/.bin/next lint",
-    "prettier": "prettier -c **/*.{js,cjs,mjs,jsx,ts,tsx,json,html,css,md,yaml}"
+    "prettier": "prettier -c **/*.{js,cjs,mjs,jsx,ts,tsx,json,html,css,md,yaml}",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
@@ -19,6 +20,7 @@
     "@mui/material-nextjs": "^5.15.11",
     "chess.js": "^0.13.4",
     "next": "^14.1.3",
+    "patch-package": "^8.0.0",
     "react": "^18.2.0",
     "react-chessboard": "^4.5.0",
     "react-dom": "^18.2.0"
