--- a/compose.yaml
+++ b/compose.yaml
@@ -13,8 +13,6 @@ services:
       - 9229:9229
       - 9230:9230
   stockfish:
-    image: aau-p2/stockfish
-    build:
-      context: ./stockfish
+    image: audio-engineer/aau-p2-stockfish:latest
     ports:
-      - 23249:23249
+      - 8000:8000
