Fix #48. Rename to chess-teacher-front-end

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aau-p2-software",
+  "name": "chess-teacher-front-end",
   "type": "module",
   "version": "0.1.0",
   "private": true,
