--- a/compose.yaml
+++ b/compose.yaml
@@ -16,3 +16,9 @@ services:
     image: audio-engineer/chess-teacher-stockfish:latest
     ports:
       - 8000:8000
+  firebase:
+    image: firebase-emulator:latest
+    ports:
+      - 9000:9000
+      - 9099:9099
+      - 4000:4000
