--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.15.13",
     "@mui/material-nextjs": "^5.15.11",
     "chess.js": "^0.13.4",
+    "firebase": "^10.9.0",
     "next": "^14.1.3",
     "patch-package": "^8.0.0",
     "react": "^18.2.0",
