Fix #56. Make source code directory name dynamic in containers

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
-  "name": "app",
-  "workspaceFolder": "/home/node/app/",
+  "name": "${localWorkspaceFolderBasename}",
+  "workspaceFolder": "/home/node/${localWorkspaceFolderBasename}",
   "dockerComposeFile": "../compose.yaml",
   "service": "server",
   "remoteUser": "root",
