--- a/package.json
+++ b/package.json
@@ -19,25 +19,24 @@
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
     "@mui/material-nextjs": "^5.15.11",
+    "@mui/x-data-grid": "^7.1.0",
     "chess.js": "^0.13.4",
     "firebase": "^10.9.0",
     "next": "^14.1.3",
     "patch-package": "^8.0.0",
     "react": "^18.2.0",
     "react-chessboard": "^4.5.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.28",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8.4.35",
     "prettier": "3.2.5",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2",
     "typescript-eslint": "^7.2.0"
   }
