--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^2.0.3",
+    "@chatscope/chat-ui-kit-styles": "^1.4.0",
+    "@chatscope/use-chat": "^3.1.2",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
@@ -22,6 +25,7 @@
     "@mui/x-data-grid": "^7.1.0",
     "chess.js": "^0.13.4",
     "firebase": "^10.9.0",
+    "nanoid": "^5.0.6",
     "next": "^14.1.3",
     "patch-package": "^8.0.0",
     "react": "^18.2.0",
