--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.0.2",
     "@types/node": "^20.11.28",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
