--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/material": "^5.15.13",
     "@mui/material-nextjs": "^5.15.11",
     "@mui/x-data-grid": "^7.1.0",
+    "@tanstack/react-query": "^5.29.0",
     "chess.js": "^0.13.4",
     "firebase": "^10.9.0",
     "nanoid": "^5.0.6",
@@ -30,8 +31,7 @@
     "patch-package": "^8.0.0",
     "react": "^18.2.0",
     "react-chessboard": "^4.5.0",
-    "react-dom": "^18.2.0",
-    "react-firebase-hooks": "^5.1.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
