--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "patch-package": "^8.0.0",
     "react": "^18.2.0",
     "react-chessboard": "^4.5.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
