Fix #123. Major refactoring

--- a/.github/workflows/formatting-and-linting.yml
+++ b/.github/workflows/formatting-and-linting.yml
@@ -13,7 +13,7 @@ jobs:
           node-version: 20
           cache: npm
       - name: Install Packages
-        run: npm ci
+        run: npm ci --force
       - name: Run ESLint
         continue-on-error: true
         run: npm run lint:ci
