--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' node_modules/.bin/next dev",
-    "build": "node_modules/.bin/next build",
-    "start": "node_modules/.bin/next start",
-    "lint": "node_modules/.bin/next lint",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "lint:ci": "eslint -o eslint-report.json -f json .",
     "prettier": "prettier -c **/*.{js,cjs,mjs,jsx,ts,tsx,json,html,css,md,yaml}",
     "postinstall": "patch-package"
@@ -18,34 +18,34 @@
     "@chatscope/use-chat": "^3.1.2",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.13",
-    "@mui/material": "^5.15.13",
+    "@mui/material": "^5.15.15",
     "@mui/material-nextjs": "^5.15.11",
-    "@mui/x-data-grid": "^7.1.0",
-    "@tanstack/react-query": "^5.29.0",
-    "chess-fen": "^1.0.2",
+    "@mui/x-data-grid": "^7.3.0",
+    "@tanstack/react-query": "^5.29.2",
     "chess.js": "^0.13.4",
-    "firebase": "^10.9.0",
-    "nanoid": "^5.0.6",
-    "next": "^14.1.3",
+    "firebase": "^10.11.0",
+    "jose": "^5.2.4",
+    "nanoid": "^5.0.7",
+    "next": "^14.3.0-canary.18",
     "patch-package": "^8.0.0",
     "react": "^18.2.0",
     "react-chessboard": "^4.5.0",
     "react-dom": "^18.2.0",
-    "react-toastify": "^10.0.5",
-    "usehooks-ts": "^3.1.0"
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
-    "@types/node": "^20.11.28",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@eslint/js": "^9.1.1",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
+    "eslint-config-next": "^14.2.2",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "3.2.5",
-    "typescript": "^5.4.2",
-    "typescript-eslint": "^7.2.0"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.1"
   }
 }
