--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "firebase": "^10.11.0",
     "jose": "^5.2.4",
     "nanoid": "^5.0.7",
-    "next": "^14.3.0-canary.18",
+    "next": "^14.2.3",
     "patch-package": "^8.0.0",
     "react": "^18.2.0",
     "react-chessboard": "^4.5.0",
