Fix #137. Configure Dependabot

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,12 +1,15 @@
-.devcontainer
-.github
-.editorconfig
-.env.local.sample
-.env.sample
-.gitattributes
-.gitignore
-.prettierignore
-.prettierrc
-compose.yaml
-eslint.config.js
-README.md
+*
+!/app
+!/chat
+!/components
+!/contexts
+!/firebase
+!/patches
+!/public
+!/types
+!/utils
+!/middleware.ts
+!/next.config.js
+!/package.json
+!/package-lock.json
+!/tsconfig.json
