Fix #160. Prepare for deployment

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,13 +1,13 @@
 *
-!/app
-!/chat
-!/components
-!/contexts
-!/firebase
-!/patches
-!/public
-!/types
-!/utils
+!/app/**
+!/chat/**
+!/components/**
+!/contexts/**
+!/firebase/**
+!/patches/**
+!/public/**
+!/types/**
+!/utils/**
 !/middleware.ts
 !/next.config.js
 !/package.json
