--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chess-teacher-front-end",
   "type": "module",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
@@ -19,34 +19,35 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.13",
-    "@mui/material": "^5.15.15",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
     "@mui/material-nextjs": "^5.15.11",
-    "@mui/x-data-grid": "^7.3.0",
-    "@tanstack/react-query": "^5.29.2",
-    "@vercel/speed-insights": "^1.0.10",
+    "@mui/x-data-grid": "^7.5.1",
+    "@tanstack/react-query": "^5.40.0",
+    "@vercel/speed-insights": "^1.0.11",
     "chess.js": "^0.13.4",
-    "firebase": "^10.11.0",
-    "jose": "^5.2.4",
+    "firebase": "^10.12.2",
+    "jose": "^5.3.0",
     "nanoid": "^5.0.7",
     "next": "^14.2.3",
     "patch-package": "^8.0.0",
-    "react": "^18.2.0",
-    "react-chessboard": "^4.5.0",
-    "react-dom": "^18.2.0",
+    "react": ">= 18.0.0 <= 18.2.0",
+    "react-chessboard": "^4.6.0",
+    "react-dom": ">= 18.0.0 <= 18.2.0",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.0.2",
-    "@eslint/js": "^9.1.1",
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.3.0",
+    "@types/eslint__js": "^8.42.3",
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.2",
+    "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "3.2.5",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.7.1"
+    "typescript-eslint": "^7.11.0"
   }
 }
